<resources>
    <string name="app_name">IndianNewsScroll</string>
    <string name="appwidget_text">100</string>
    <string name="DateView">00</string>
    <string name="configure">Select Language</string>
    <string name="add_widget">Add widget</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="Marathi">Marathi</string>
    <string name="Urdu">Urdu</string>
    <string name="tamil">Tamil</string>
    <string name="dogri">Dogri</string>
    <string name="assamese">Assamese</string>
    <string name="gujarati">Gujarati</string>
    <string name="catagory">Select Catagory</string>
    <string name="name">Name</string>
    <string name="national">National</string>
    <string name="international">International</string>
    <string name="state">State</string>
    <string name="business">Business</string>
    <string name="sports">Sports</string>
    <string name="regional">Regional</string>
    <string name="appwidget_heading">dummyyyyyyyyyyyyyyyyy</string>
    <string name="activity_home_title">Indian News Scroll</string>
    <string name="activity_home_continue">Got It</string>
    <string name="textview">Marine Version</string>
    <string name="marineversion">Marine Version</string>
    <string name="Adved">Yipeee Noodles!!!-Taste it</string>
</resources>
