<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_app_preference_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/activity_home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/activity_home_title"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/activity_home_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/activity_home_title"
        app:layout_constraintBottom_toTopOf="@+id/marineversion"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/nunews" />

    <TextView
        android:id="@+id/marineversion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/marineversion"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/activity_home_ok_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/activity_home_ok_button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:background="#44FFFFFF"
        android:text="@string/activity_home_continue"
        android:textColor="@color/text_white"
        android:textSize="@dimen/activity_home_ok_button"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
